--- a/styles/style.css
+++ b/styles/style.css
@@ -3360,6 +3360,18 @@ a:focus:not(:focus-visible) {
     max-width: 300px;
   }
 }
+@media (max-width:480px) {
+  
+  .about-card__text-decor {
+    padding-bottom: 20px;
+}
+
+
+  .about-card-additional-stuff {
+    align-items: self-end;
+    margin-top: 20px;;
+  }
+}
 @media (max-width: 430px) {
   .case-highlights__visual--centered .case-highlights__visual-image--bg,
   .case-widget-card.case-widget-card-390  {
